Fix spacing on main page

--- a/src/style.scss
+++ b/src/style.scss
@@ -126,6 +126,7 @@ header {
 #searchbar {
   width: 21rem;
   padding: 0.2rem 0.5rem;
+  margin-bottom: 1rem;
 }
 
 .no-result {
@@ -197,7 +198,7 @@ header {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: $CARD-SPACING;
+  margin: 0.5rem $CARD-SPACING;
 
   &:hover {
     transform: scale(1.06);
